# tbip

./: .gitignore  CMakeLists.txt  README.md
examples/: colorbars.cpp  function.cpp  mandelbrot.cpp  simple.cpp
include/: tbip.h  tbip_colormaps.h  tbip_exceptions.h
src/: colormaps.cpp  tbip.cpp
